--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="wrapper">
         <main class="page">
             <section class="page__hero hero ibg">
-                <img src="../img/hero/background.png" alt="background">
+                <img src="img/hero/background.png" alt="background">
                 <div class="hero__container">
                     <div class="hero__content">
                         <div class="hero__top top">
                             <div class="top__main-title">
                                 <div class="top__logo ibg">
-                                    <img src="../img/hero/logo.svg" alt="Our Logo" class="logo">
+                                    <img src="img/hero/logo.svg" alt="Our Logo" class="logo">
                                 </div>
                                 <div class="header__text">
                                     <p class="bigger">Round Rock</p>
@@ -58,14 +58,14 @@
                     </div>
                 </div>
                 <div class="services__curved-block ibg">
-                    <img src="../img/services/background.png" alt="">
+                    <img src="img/services/background.png" alt="">
                     <div class="services__container">
                         <div class="services__content">
                             <div class="services__cells">
                                 <div class="cell-wrapper">
                                     <div class="services__cell cell">
                                         <div class="cell__image ibg">
-                                            <img src="../img/services/01.jpeg" alt="Image">
+                                            <img src="img/services/01.jpeg" alt="Image">
                                         </div>
                                         <h3 class="cell__title">replacing sockets</h3>
                                         <a href="#" class="cell__button">
@@ -76,7 +76,7 @@
                                 <div class="cell-wrapper">
                                     <div class="services__cell cell">
                                         <div class="cell__image ibg">
-                                            <img src="../img/services/01.jpeg" alt="Image">
+                                            <img src=img/services/01.jpeg" alt="Image">
                                         </div>
                                         <h3 class="cell__title">replacing sockets</h3>
                                         <a href="#" class="cell__button">
@@ -87,7 +87,7 @@
                                 <div class="cell-wrapper">
                                     <div class="services__cell cell">
                                         <div class="cell__image ibg">
-                                            <img src="../img/services/01.jpeg" alt="Image">
+                                            <img src="img/services/01.jpeg" alt="Image">
                                         </div>
                                         <h3 class="cell__title">replacing sockets</h3>
                                         <a href="#" class="cell__button">
@@ -98,7 +98,7 @@
                                 <div class="cell-wrapper">
                                     <div class="services__cell cell">
                                         <div class="cell__image ibg">
-                                            <img src="../img/services/01.jpeg" alt="Image">
+                                            <img src="img/services/01.jpeg" alt="Image">
                                         </div>
                                         <h3 class="cell__title">replacing sockets</h3>
                                         <a href="#" class="cell__button">
@@ -109,7 +109,7 @@
                                 <div class="cell-wrapper">
                                     <div class="services__cell cell">
                                         <div class="cell__image ibg">
-                                            <img src="../img/services/01.jpeg" alt="Image">
+                                            <img src="img/services/01.jpeg" alt="Image">
                                         </div>
                                         <h3 class="cell__title">replacing sockets</h3>
                                         <a href="#" class="cell__button">
@@ -120,7 +120,7 @@
                                 <div class="cell-wrapper">
                                     <div class="services__cell cell">
                                         <div class="cell__image ibg">
-                                            <img src="../img/services/01.jpeg" alt="Image">
+                                            <img src="img/services/01.jpeg" alt="Image">
                                         </div>
                                         <h3 class="cell__title">replacing sockets</h3>
                                         <a href="#" class="cell__button">
@@ -135,7 +135,7 @@
 
             </section>
             <section class="page__about about ibg">
-                <img src="../img/services/02.png" alt="background">
+                <img src="img/services/02.png" alt="background">
                 <div class="about__container">
                     <div class="reusable__header">
                         <h4 class="reusable__header-subtitle">only the best</h4>
@@ -265,28 +265,28 @@
                     </div>
                     <div class="gallery__set set">
                         <div class="set__image ibg">
-                            <img src="../img/gallery/01.jpeg" alt="gallery image">
+                            <img src="img/gallery/01.jpeg" alt="gallery image">
                         </div>
                         <div class="set__image ibg">
-                            <img src="../img/gallery/02.jpeg" alt="gallery image">
+                            <img src="img/gallery/02.jpeg" alt="gallery image">
                         </div>
                         <div class="set__image ibg">
-                            <img src="../img/gallery/03.jpeg" alt="gallery image">
+                            <img src="img/gallery/03.jpeg" alt="gallery image">
                         </div>
                         <div class="set__image ibg">
-                            <img src="../img/gallery/04.jpeg" alt="gallery image">
+                            <img src="img/gallery/04.jpeg" alt="gallery image">
                         </div>
                         <div class="set__image ibg">
-                            <img src="../img/gallery/03.jpeg" alt="gallery image">
+                            <img src="img/gallery/03.jpeg" alt="gallery image">
                         </div>
                         <div class="set__image ibg">
-                            <img src="../img/gallery/04.jpeg" alt="gallery image">
+                            <img src="img/gallery/04.jpeg" alt="gallery image">
                         </div>
                         <div class="set__image ibg a">
-                            <img src="../img/gallery/01.jpeg" alt="gallery image">
+                            <img src="img/gallery/01.jpeg" alt="gallery image">
                         </div>
                         <div class="set__image ibg a">
-                            <img src="../img/gallery/02.jpeg" alt="gallery image">
+                            <img src="img/gallery/02.jpeg" alt="gallery image">
                         </div>
                     </div>
                 </div>
@@ -355,12 +355,12 @@
         </main>
 
         <footer class="footer">
-    <div class="footer__container">
-        <a href="https://notrealhumanbean.github.io/portfolio/" class="footer__link passing-underline">
-            more pages here
-        </a>
-    </div>
-</footer>
+            <div class="footer__container">
+                <a href="https://notrealhumanbean.github.io/portfolio/" class="footer__link passing-underline">
+                    more pages here
+                </a>
+            </div>
+        </footer>
     </div>
     <script src="js/main-dist.js"></script>
 </body>
