second commit margin changes on mobile

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <div class="cell-wrapper">
                                     <div class="services__cell cell">
                                         <div class="cell__image ibg">
-                                            <img src=img/services/01.jpeg" alt="Image">
+                                            <img src="img/services/01.jpeg" alt="Image">
                                         </div>
                                         <h3 class="cell__title">replacing sockets</h3>
                                         <a href="#" class="cell__button">
